// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBlockedUsers filters by createdAt 1`] = `
Object {
  "data": Object {
    "ListBlockedUsers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2017-01-04T00:00:00.000Z",
            "id": "blockedUser2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2017-01-05T00:00:00.000Z",
            "id": "blockedUser1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListBlockedUsers lists all blocked users 1`] = `
Object {
  "data": Object {
    "ListBlockedUsers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "blockedReason": "Some announcement",
            "id": "blockedUser3",
          },
        },
        Object {
          "node": Object {
            "blockedReason": "Some announcement",
            "id": "blockedUser2",
          },
        },
        Object {
          "node": Object {
            "blockedReason": "Some announcement",
            "id": "blockedUser1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListBlockedUsers sorts 1`] = `
Object {
  "data": Object {
    "ListBlockedUsers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2017-01-05T00:00:00.000Z",
            "id": "blockedUser1",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2017-01-04T00:00:00.000Z",
            "id": "blockedUser2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2017-01-03T00:00:00.000Z",
            "id": "blockedUser3",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListBlockedUsers supports after 1`] = `
Object {
  "data": Object {
    "ListBlockedUsers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "blockedUser1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListBlockedUsers supports before 1`] = `
Object {
  "data": Object {
    "ListBlockedUsers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "blockedUser3",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;
